# Jump Start Changelog

## 2.2.4 - XX/XX/2018

--------------------------------------------------------------

## 2.2.3 - 03/12/2018

* **Updated Theme Blvd framework to 2.7.3**
* Fixed: Images sometimes not displaying within `[caption]` shortcode; this would happen when a captioned image had a link that was NOT a lightbox URL (i.e. not a link to an image file or video).
* Fixed: Selected "order" query parameter (i.e. `ASC` or `DESC`) sometimes not getting used with paginated post elements.
* Fixed: Scroll-to-section buttons not working, when sticky header is disabled.

--------------------------------------------------------------

## 2.2.2 - 02/09/2018

* **Updated Theme Blvd framework to 2.7.2**
* Improvement: Framework welcome message will now only show on Themes screen, and only once per user dismiss; it will no longer display again when switching back and forth themes.
* Improvement: Theme's license management admin has been re-designed to accommodate [Jump Start extensions](https://wpjumpstart.com/extensions?utm_campaign=changelog).
* Improvement: Added filters for customizing the TinyMCE toolbars of the framework's new `editor` type options ([see example here](https://gist.github.com/themeblvd/29745ee2d0b583bac3398f0b019dce1a)).
* Fixed: JavaScript issues in the admin, when theme welcome message is present.
* Fixed: Isotope filtering not working with post lists.
* Fixed: Background video not working on individual columns from the layout builder.
* Fixed: Line, Bar, Pie and Doughnut charts not working.
* Fixed: Option type `button` not showing labels for colors being chosen.
* Fixed: URLs with inadvertent spaces added to start or end not saving in theme options and layout builder.
* Fixed: "Add Shortcode" button displaying in layout builder when disabled from *Settings > Writing*.

--------------------------------------------------------------

## 2.2.1 - 01/22/2018

* **Updated Theme Blvd framework to 2.7.1**